# mcp_ssh

./: .bandit  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  coverage.xml  demo_test.py  demo_timeout.py  pyproject.toml  test_command_fix.py  test_fix_simple.py
.github/workflows/: ci.yml
examples/: demo_background.py  demo_test.py  security_config.env
scripts/: dev.py  make
src/mcp_ssh/: __init__.py  background.py  security.py  server.py  ssh.py
tests/: __init__.py  conftest.py  test_background_simple.py  test_command_execution_fix.py  test_e2e_qa.py  test_integration.py  test_mcp_server.py  test_security.py  test_ssh_client.py
