[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_ssh"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server with SSH capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
    "paramiko>=3.5.1",
]

[project.scripts]
mcp_ssh = "mcp_ssh.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ssh"]
